Adding event listener

--- a/docs/workshops/GemFire-101/01-LOCAL-101.md
+++ b/docs/workshops/GemFire-101/01-LOCAL-101.md
@@ -556,3 +556,57 @@ stop server --name=server1
 list members
 query --query="select * from /Account where name = 'Account' "
 ```
+------------------------
+# Bonus - listener
+
+
+````java
+@Component
+class VMwareAccountListener(private val locationGemFireTemplate: GemfireTemplate) {
+    private val log : Logger = LogManager.getLogger(VMwareAccountListener::class.java)
+
+    @ContinuousQuery(name = "addVMwareLocation", query = "select * from /Account where name = 'VMware' ")
+    fun addVMwareLocation(cqEvent: CqEvent) {
+        log.info("==============Adding location!!!!!")
+
+        var key = cqEvent.key.toString()
+        val location : Location = Location()
+        location.id = key
+        location.address = "3401 Hillview Ave"
+        location.city = "Palo Alto"
+        location.stateCode = "CA"
+        location.zipCode = "94304"
+
+        locationGemFireTemplate.put(key,location)
+    }
+}
+````
+
+```java
+cd /Users/Projects/VMware/Tanzu/TanzuData/TanzuGemFire/dev/spring-geode-showcase
+```
+
+Gfsh 
+
+```shell
+query --query="select * from /Location"
+```
+
+```java
+java -Dspring.profiles.active=local -jar  applications/account-location-event-service/target/account-location-event-service-0.0.1-SNAPSHOT.jar
+```
+
+```shell
+curl -X 'POST' \
+  'http://localhost:8080/accounts' \
+  -H 'accept: */*' \
+  -H 'Content-Type: application/json' \
+  -d '{
+  "id": "2021",
+  "name": "VMware"
+}'
+```
+
+```shell
+query --query="select * from /Location"
+```
