--- a/docs/workshops/GemFire-101/01-LOCAL-101.md
+++ b/docs/workshops/GemFire-101/01-LOCAL-101.md
@@ -18,7 +18,7 @@ Overview
 Disable VPN
 
 ```shell
-cd /Users/devtools/repositories/IMDG/geode/apache-geode-1.13.1/bin$
+cd /Users/devtools/repositories/IMDG/geode/apache-geode-1.13.1/bin
 rm -rf locator server1 server2 server3
 ````
 
