--- a/docs/workshops/GemFire-101/01-LOCAL-101.md
+++ b/docs/workshops/GemFire-101/01-LOCAL-101.md
@@ -5,7 +5,7 @@ Overview
 - Start Clustering 
   - Gfsh
 - App READ/WRITE
-- Query (Distinct, Where IN, Where contains)
+- Querying
 - GemFire as a cache 
 - Proxy versus Cache Proxy
 - GemFire functions
