--- a/docs/workshops/GemFire-101/01-LOCAL-101.md
+++ b/docs/workshops/GemFire-101/01-LOCAL-101.md
@@ -281,7 +281,7 @@ Clears cache because system of record change
 query --query="select * from /AccountCache"
 ```
 
-Reload cache from jdbc
+Reload cache from relationship database
 ```shell
 curl -X 'GET' \
   'http://localhost:9020/accounts/1' \
