--- a/docs/workshops/GemFire-101/01-LOCAL-101.md
+++ b/docs/workshops/GemFire-101/01-LOCAL-101.md
@@ -91,7 +91,7 @@ cd /Users/Projects/VMware/Tanzu/TanzuData/TanzuGemFire/dev/spring-geode-showcase
 java -Dspring.profiles.active=local -jar  applications/account-rest-service/target/account-rest-service-0.0.1-SNAPSHOT.jar
 ```
 
-Save Account and Location with a committed transaction
+Save Account
 
 ```shell
 open http://localhost:8080
@@ -305,6 +305,26 @@ cd /Users/Projects/VMware/Tanzu/TanzuData/TanzuGemFire/dev/spring-geode-showcase
 java -jar  applications/account-location-rest-service/target/account-location-rest-service-0.0.1-SNAPSHOT.jar --spring.profiles.active=local
 ```
 
+
+```kotlin
+@RestController
+class LocationController(private var locationRepository: LocationRepository) {
+    @PostMapping("locations/location")
+    fun saveLocation(@RequestBody location: Location) {
+        locationRepository.save(location)
+    }
+
+    @GetMapping("locations/location/{id}")
+    fun findLocation(@PathVariable id: String): Location? {
+        var results = locationRepository.findById(id)
+        if(results.isEmpty)
+            return null
+
+        return results.get()
+    }
+}
+```
+
 ```shell
 list clients
 ```
@@ -377,6 +397,8 @@ curl -X 'GET' \
   'http://localhost:8081/locations/location/1' \
   -H 'accept: */*';echo
 ```
+
+Empty (local updated)
 
 
 ---------------------------------------------
@@ -455,6 +477,8 @@ public class AccountCountInNyFunction implements Function<PdxInstance>, Declarab
 execute function --id=AccountCountInNyFunction --region=/Account
 ```
 
+Expected 1
+
 ```shell
 curl -X 'POST' \
   'http://localhost:8080/accounts' \
@@ -484,6 +508,8 @@ curl -X 'POST' \
 ```shell
 execute function --id=AccountCountInNyFunction --region=/Account
 ```
+
+Expected 2
 
 --------------------
 # GemFire operational data store
@@ -607,3 +633,5 @@ curl -X 'POST' \
 ```shell
 query --query="select * from /Location"
 ```
+
+Expected added "3401 Hillview Ave"
